  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.


Features:

- You can now globally enable input of high ASCII codes for Unix by
  specifying "EnableSC" without parameters in the configuration file. This is
  useful if you need to enter cyrillics and the like (previously, you had to
  list each and ever character that you wanted to enable as parameter, which
  is good if you only want to enable few, but bad if you must enable a whole
  alphabet).

- The AKA matching alogrithm now also takes into account net and node number.
  So, if you have two AKAs, 2:1234/5 and 2:789/123, and you write a mail to
  a member of net 2:789 your 2:789/123 AKA will be used instead of your
  primary AKA.

- The "Gate" keyword has a new parameter "Ask". Instead of globally deciding
  if you want to zonegate all messages or none, with "Gate Ask" you can now
  individually select if you want to employ zone gating for each message.

- The new keyword "Areadesc" gives you full control on how Msged format the
  area descriptions in the area list based on the Areafile. You can specify
  if you want to see only area tags, or only area descriptions, or both, and
  if you want to uppercase, lowercase, or leave as is any of those strings.
  See the manual for more information.

- New Key "Alt+T" (function "selchs") introduced. It allows you to manually
  specify the charcter set to use for recoding a mail when reading it. You
  should only need this in rare occasions (like when trying to read Russian
  mails that do not have CHRS kludges in a Western setup). Normally, the
  AssumeCharset keywords should do all work for you.
