@@ -16,10 +16,6 @@ WRITMAPS=~/.msged.writmaps
 #DEFAULT_CONFIG_FILE=/usr/local/share/msged/msged.cfg
 DEFAULT_CONFIG_FILE=~/.msged
 
-# where to put the program
-#INSTDIR=~/bin
-INSTDIR=~/bin
-
 INCDIR=..
 
 # options for installing programs
@@ -90,7 +86,7 @@ objs=   addr.o     \
 	win.o      \
 	wrap.o
 
-all: $(TARGET)
+all: $(TARGET) testcons
 
 .c.o:
 	$(CC) $(COPT) $(CFLAGS) $(CDEFS) -c $<
@@ -98,13 +94,16 @@ all: $(TARGET)
 $(TARGET): $(objs)
 	$(CC) $(COPT) $(LFLAGS) -o $(TARGET) $(objs) $(MSGAPI) $(TERMCAP)
 
+testcons:  testcons.o
+	$(CC) $(COPT) $(LFLAGS) -o testcons testcons.o $(TERMCAP)
+
 clean:
 	-rm *.o *~
 
 distclean: clean
-	-rm $(TARGET)
+	-rm $(TARGET) testcons
 
 install: $(TARGET)
-	install $(IBOPT) $(TARGET) $(BINDIR)
-	install bin/latin/readmaps.dat $(READMAPS)
-	install bin/latin/writmaps.dat $(WRITMAPS)
+	install -c $(IBOPT) $(TARGET) $(BINDIR)
+	install -c bin/latin/readmaps.dat $(READMAPS)
+	install -c bin/latin/writmaps.dat $(WRITMAPS)
